# kwin-effects-better-blur-dx

./: CHANGELOG.md  CMakeLists.txt  README.md  build.sh
docs/: configuration.md  debugging.md
nix/: package-x11.nix  package.nix
src/: CMakeLists.txt  blur.cpp  blur.h  blur.kcfg  blur.qrc  blur_cache.cpp  blur_cache.hpp  blur_extensions.cpp  blurconfig.kcfgc  kwin_compat_6_6.hpp  kwin_version.hpp  refraction_pass.cpp  refraction_pass.hpp  rounded_corners_pass.cpp  rounded_corners_pass.hpp  settings.cpp  settings.h  settings.hpp  texture_comparer.cpp  texture_comparer.hpp  utils.cpp  utils.h  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp  window_matcher.cpp  window_matcher.hpp
src/kcm/: CMakeLists.txt  blur_config.cpp  blur_config.h  blur_config.ui
src/shaders/: refraction.frag  refraction.glsl  refraction_core.frag  refraction_core.glsl  refraction_rounded.frag  refraction_rounded_core.frag  rounded_corners.frag  rounded_corners_core.frag  texture.frag  texture_compare.frag  texture_compare_and_update.comp  texture_compare_and_update.frag  texture_compare_and_update_core.frag  texture_compare_core.frag  texture_core.frag  upsample.frag  upsample.glsl  upsample_core.frag  upsample_core.glsl
